Nit fixes for get started flow

--- a/Pear/Controllers/Onboarding/Get Started Flow/GetStartedFriendNameViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/GetStartedFriendNameViewController.storyboard
@@ -36,52 +36,57 @@
                                     <action selector="nextButtonClicked:" destination="mxq-xg-X8a" eventType="touchUpInside" id="eeW-Gj-RXZ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is your friend's name?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRZ-ev-SgS">
-                                <rect key="frame" x="30" y="100" width="315" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is your friend's name?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="hRZ-ev-SgS">
+                                <rect key="frame" x="30" y="100" width="315" height="27.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R0e-w4-zqI">
-                                <rect key="frame" x="30" y="144" width="315" height="42"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Jane Doe" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R0e-w4-zqI">
+                                <rect key="frame" x="20" y="167.5" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="y8A-vO-ax1"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="name"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gtc-oT-Mg8">
-                                <rect key="frame" x="30" y="185" width="315" height="1"/>
+                                <rect key="frame" x="0.0" y="206.5" width="375" height="1"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="WOP-Kz-RWc"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4tC-Hw-1lU">
-                                <rect key="frame" x="305" y="145" width="40" height="40"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4tC-Hw-1lU">
+                                <rect key="frame" x="339" y="174.5" width="26" height="26"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="54A-Jd-ys4"/>
-                                    <constraint firstAttribute="height" constant="40" id="mWl-H9-hky"/>
+                                    <constraint firstAttribute="width" constant="26" id="54A-Jd-ys4"/>
+                                    <constraint firstAttribute="height" constant="26" id="mWl-H9-hky"/>
                                 </constraints>
-                                <state key="normal" title="x"/>
+                                <state key="normal" image="onboarding-clear-text-button"/>
+                                <connections>
+                                    <action selector="clearButtonClicked:" destination="mxq-xg-X8a" eventType="touchUpInside" id="R0C-PH-t7S"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="hRZ-ev-SgS" firstAttribute="centerX" secondItem="HZE-2s-apR" secondAttribute="centerX" id="1dh-J6-PLH"/>
-                            <constraint firstItem="R0e-w4-zqI" firstAttribute="top" secondItem="hRZ-ev-SgS" secondAttribute="bottom" constant="20" id="1qc-Ja-0wO"/>
+                            <constraint firstItem="R0e-w4-zqI" firstAttribute="top" secondItem="hRZ-ev-SgS" secondAttribute="bottom" constant="40" id="1qc-Ja-0wO"/>
                             <constraint firstItem="R0e-w4-zqI" firstAttribute="centerX" secondItem="hRZ-ev-SgS" secondAttribute="centerX" id="2ft-ti-qqt"/>
                             <constraint firstItem="shm-9I-3sS" firstAttribute="top" secondItem="HZE-2s-apR" secondAttribute="top" constant="20" id="50k-EN-mkr"/>
                             <constraint firstItem="HZE-2s-apR" firstAttribute="trailing" secondItem="tN0-Yn-GTg" secondAttribute="trailing" constant="20" id="Bl3-BR-sWo"/>
-                            <constraint firstItem="HZE-2s-apR" firstAttribute="trailing" secondItem="4tC-Hw-1lU" secondAttribute="trailing" constant="30" id="ByI-jV-xEu"/>
+                            <constraint firstItem="HZE-2s-apR" firstAttribute="trailing" secondItem="4tC-Hw-1lU" secondAttribute="trailing" constant="10" id="ByI-jV-xEu"/>
                             <constraint firstItem="4tC-Hw-1lU" firstAttribute="centerY" secondItem="R0e-w4-zqI" secondAttribute="centerY" id="CNx-TH-3fX"/>
+                            <constraint firstItem="R0e-w4-zqI" firstAttribute="width" secondItem="Fds-dE-DJJ" secondAttribute="width" constant="-40" id="HoG-nd-dhP"/>
                             <constraint firstItem="tN0-Yn-GTg" firstAttribute="centerY" secondItem="shm-9I-3sS" secondAttribute="centerY" id="Ixg-gd-37B"/>
                             <constraint firstItem="shm-9I-3sS" firstAttribute="leading" secondItem="HZE-2s-apR" secondAttribute="leading" constant="20" id="Snf-1p-Rj4"/>
                             <constraint firstItem="hRZ-ev-SgS" firstAttribute="top" secondItem="shm-9I-3sS" secondAttribute="bottom" constant="20" id="V4J-Xz-l3d"/>
-                            <constraint firstItem="Gtc-oT-Mg8" firstAttribute="width" secondItem="R0e-w4-zqI" secondAttribute="width" id="VNS-OY-Vmg"/>
                             <constraint firstItem="Gtc-oT-Mg8" firstAttribute="bottom" secondItem="R0e-w4-zqI" secondAttribute="bottom" id="VzX-Zd-bMx"/>
-                            <constraint firstItem="R0e-w4-zqI" firstAttribute="width" secondItem="hRZ-ev-SgS" secondAttribute="width" id="brU-34-byH"/>
                             <constraint firstItem="hRZ-ev-SgS" firstAttribute="leading" secondItem="HZE-2s-apR" secondAttribute="leading" constant="30" id="d6u-C3-faA"/>
-                            <constraint firstItem="Gtc-oT-Mg8" firstAttribute="top" secondItem="4tC-Hw-1lU" secondAttribute="bottom" id="eM8-JP-Afp"/>
                             <constraint firstItem="Gtc-oT-Mg8" firstAttribute="centerX" secondItem="R0e-w4-zqI" secondAttribute="centerX" id="f5A-7J-wTw"/>
+                            <constraint firstItem="Gtc-oT-Mg8" firstAttribute="width" secondItem="Fds-dE-DJJ" secondAttribute="width" id="mK5-pV-BZt"/>
                             <constraint firstItem="HZE-2s-apR" firstAttribute="trailing" secondItem="hRZ-ev-SgS" secondAttribute="trailing" constant="30" id="sqS-lL-8qg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="HZE-2s-apR"/>
@@ -98,6 +103,7 @@
     </scenes>
     <resources>
         <image name="onboarding-back-button" width="96" height="96"/>
+        <image name="onboarding-clear-text-button" width="96" height="96"/>
         <image name="onboarding-next-button" width="77" height="37"/>
     </resources>
 </document>
