--- a/Pear/Controllers/Onboarding/Get Started Flow/GetStartedYourNameViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/GetStartedYourNameViewController.storyboard
@@ -36,58 +36,64 @@
                                     <action selector="nextButtonClicked:" destination="Nfk-kT-InT" eventType="touchUpInside" id="Zmu-c1-VtK"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is your name?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wLx-As-bZM">
-                                <rect key="frame" x="30" y="100" width="315" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is your name?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="wLx-As-bZM">
+                                <rect key="frame" x="30" y="100" width="315" height="27.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="John Smith" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fql-jR-CiE">
-                                <rect key="frame" x="30" y="144" width="315" height="42"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Jane Doe" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5TP-Gv-tsU">
+                                <rect key="frame" x="20" y="167.5" width="335" height="40"/>
+                                <color key="tintColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="06N-aF-XBb"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="name"/>
                             </textField>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YPR-dP-t1r">
-                                <rect key="frame" x="30" y="185" width="315" height="1"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e16-WH-8Ul">
+                                <rect key="frame" x="0.0" y="206.5" width="375" height="1"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="znn-Gp-udY"/>
+                                    <constraint firstAttribute="height" constant="1" id="EtY-Rb-IfH"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w82-y3-Yk4">
-                                <rect key="frame" x="305" y="145" width="40" height="40"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mNn-Sl-5vv">
+                                <rect key="frame" x="319" y="174.5" width="26" height="26"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="NSw-Vk-hxe"/>
-                                    <constraint firstAttribute="height" constant="40" id="ns0-sr-YWd"/>
+                                    <constraint firstAttribute="height" constant="26" id="Lel-Rt-r4F"/>
+                                    <constraint firstAttribute="width" constant="26" id="csi-s4-lFc"/>
                                 </constraints>
-                                <state key="normal" title="x"/>
+                                <state key="normal" image="onboarding-clear-text-button"/>
+                                <connections>
+                                    <action selector="clearButtonClicked:" destination="Nfk-kT-InT" eventType="touchUpInside" id="b9z-0G-TRh"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="e16-WH-8Ul" firstAttribute="width" secondItem="soc-Ow-m9Z" secondAttribute="width" id="4M7-UF-Y4d"/>
                             <constraint firstItem="wj4-Zf-gro" firstAttribute="top" secondItem="Fv4-2C-F9d" secondAttribute="top" constant="20" id="5F3-aV-iqb"/>
                             <constraint firstItem="wLx-As-bZM" firstAttribute="centerX" secondItem="Fv4-2C-F9d" secondAttribute="centerX" id="66M-9q-BKd"/>
-                            <constraint firstItem="YPR-dP-t1r" firstAttribute="width" secondItem="fql-jR-CiE" secondAttribute="width" id="6wd-d4-kFk"/>
-                            <constraint firstItem="YPR-dP-t1r" firstAttribute="centerX" secondItem="fql-jR-CiE" secondAttribute="centerX" id="CUS-4M-ODO"/>
                             <constraint firstItem="wLx-As-bZM" firstAttribute="leading" secondItem="Fv4-2C-F9d" secondAttribute="leading" constant="30" id="CwK-Dm-skz"/>
+                            <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="mNn-Sl-5vv" secondAttribute="trailing" constant="30" id="Gk3-v0-tu8"/>
                             <constraint firstItem="9s5-SB-Zym" firstAttribute="centerY" secondItem="wj4-Zf-gro" secondAttribute="centerY" id="Jmq-cW-AE6"/>
-                            <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="w82-y3-Yk4" secondAttribute="trailing" constant="30" id="QUI-rx-BTC"/>
-                            <constraint firstItem="w82-y3-Yk4" firstAttribute="centerY" secondItem="fql-jR-CiE" secondAttribute="centerY" id="UBN-QM-fOh"/>
                             <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="9s5-SB-Zym" secondAttribute="trailing" constant="20" id="WcA-ih-bmL"/>
-                            <constraint firstItem="fql-jR-CiE" firstAttribute="top" secondItem="wLx-As-bZM" secondAttribute="bottom" constant="20" id="YqS-vX-241"/>
-                            <constraint firstItem="YPR-dP-t1r" firstAttribute="bottom" secondItem="fql-jR-CiE" secondAttribute="bottom" id="bQ7-jN-qXG"/>
-                            <constraint firstItem="fql-jR-CiE" firstAttribute="centerX" secondItem="wLx-As-bZM" secondAttribute="centerX" id="d12-6M-y3G"/>
+                            <constraint firstItem="e16-WH-8Ul" firstAttribute="centerX" secondItem="5TP-Gv-tsU" secondAttribute="centerX" id="WqC-dT-m1P"/>
+                            <constraint firstItem="mNn-Sl-5vv" firstAttribute="centerY" secondItem="5TP-Gv-tsU" secondAttribute="centerY" id="bZs-1s-7v4"/>
                             <constraint firstItem="wj4-Zf-gro" firstAttribute="leading" secondItem="Fv4-2C-F9d" secondAttribute="leading" constant="20" id="e6g-Mn-pgR"/>
-                            <constraint firstItem="fql-jR-CiE" firstAttribute="width" secondItem="wLx-As-bZM" secondAttribute="width" id="im5-ai-700"/>
-                            <constraint firstItem="YPR-dP-t1r" firstAttribute="top" secondItem="w82-y3-Yk4" secondAttribute="bottom" id="oqX-Pk-h9v"/>
+                            <constraint firstItem="5TP-Gv-tsU" firstAttribute="centerX" secondItem="Fv4-2C-F9d" secondAttribute="centerX" id="gDG-t9-mUW"/>
                             <constraint firstItem="wLx-As-bZM" firstAttribute="top" secondItem="wj4-Zf-gro" secondAttribute="bottom" constant="20" id="pQl-3t-uiT"/>
+                            <constraint firstItem="5TP-Gv-tsU" firstAttribute="top" secondItem="wLx-As-bZM" secondAttribute="bottom" constant="40" id="uMX-ce-J3Q"/>
                             <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="wLx-As-bZM" secondAttribute="trailing" constant="30" id="vC9-My-P0e"/>
+                            <constraint firstItem="e16-WH-8Ul" firstAttribute="bottom" secondItem="5TP-Gv-tsU" secondAttribute="bottom" id="xZp-mh-BeE"/>
+                            <constraint firstItem="5TP-Gv-tsU" firstAttribute="width" secondItem="soc-Ow-m9Z" secondAttribute="width" constant="-40" id="y9E-jS-b6u"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Fv4-2C-F9d"/>
                     </view>
                     <connections>
-                        <outlet property="inputTextField" destination="fql-jR-CiE" id="6rI-k1-azi"/>
+                        <outlet property="inputTextField" destination="5TP-Gv-tsU" id="yJ9-3K-hHZ"/>
                         <outlet property="nextButton" destination="9s5-SB-Zym" id="bsS-13-BK5"/>
                     </connections>
                 </viewController>
@@ -98,6 +104,7 @@
     </scenes>
     <resources>
         <image name="onboarding-back-button" width="96" height="96"/>
+        <image name="onboarding-clear-text-button" width="96" height="96"/>
         <image name="onboarding-next-button" width="77" height="37"/>
     </resources>
 </document>
